--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <title>Finn Li's website</title>
+    </head>>
+
+    <body>
+        <h1>Finn Li</h1>
+        <ul>
+            <ls>Introduction</ls>
+            <ls>Interest</ls>
+            <ls>Programming Experience</ls>
+        </ul>
+        <div id="introduction">
+            <h2>Introduction</h2>
+            <p>Hi. My name is <strong>Finn Li</strong>. This is my website.
+                <br /><br />
+                I made this webstie for learning purposes, so please <storng>DON'T</storng> judge or hack.
+            </p>
+        </div>
+
+        <div id="interest">
+            <h2>My Interest</h2>
+                <h3>Sports</h3>
+                    <ol>
+                        <ls>Soccer</ls>
+                        <ls>Basketball</ls>
+                        <ls>Roller Skating</ls>
+                        <ls>Hockey</ls>
+                        <ls>Surfing</ls>
+                        <ls>volleyball</ls>
+                    </ol>
+                <h3>Music</h3>
+                    <ol>
+                        <ls>Hiphop</ls>
+                        <ls>Rock</ls>
+                        <ls>Jazz</ls>
+                        <ls>Country</ls>
+                        <ls>Neo-Soul</ls>
+                    </ol>
+                <h3>Academic</h3>
+                    <ol>
+                        <ls>Computer Science</ls>
+                        <ls>Maths</ls>
+                        <ls>Music</ls>
+                    </ol>
+        </div>
+
+        <div id="experience">
+            <h2>My Programming Experience</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th scope="col">C++</th>
+                        <th scope="col">Python</th>
+                        <th scope="col">Java</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>None</td>
+                        <td>Still None</td>
+                        <td><em>I'm sorry...</em></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </body>
+</html>
+
 
