--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <html>
     <head>
         <title>Finn Li's website</title>
-    </head>>
+    </head>
 
     <body>
         <h1>Finn Li</h1>
         <ul>
-            <ls>Introduction</ls>
-            <ls>Interest</ls>
-            <ls>Programming Experience</ls>
+            <li><a href="#introduction">Introduction</a></li>
+            <li><a href="interest">Interest</a></li>
+            <li><a href="#experience">Programming Experience</a></li>
         </ul>
         <div id="introduction">
             <h2>Introduction</h2>
@@ -24,26 +24,26 @@
             <h2>My Interest</h2>
                 <h3>Sports</h3>
                     <ol>
-                        <ls>Soccer</ls>
-                        <ls>Basketball</ls>
-                        <ls>Roller Skating</ls>
-                        <ls>Hockey</ls>
-                        <ls>Surfing</ls>
-                        <ls>volleyball</ls>
+                        <li>Soccer</li>
+                        <li>Basketball</li>
+                        <li>Roller Skating</li>
+                        <li>Hockey</li>
+                        <li>Surfing</li>
+                        <li>volleyball</li>
                     </ol>
                 <h3>Music</h3>
                     <ol>
-                        <ls>Hiphop</ls>
-                        <ls>Rock</ls>
-                        <ls>Jazz</ls>
-                        <ls>Country</ls>
-                        <ls>Neo-Soul</ls>
+                        <li>Hiphop</li>
+                        <li>Rock</li>
+                        <li>Jazz</li>
+                        <li>Country</li>
+                        <li>Neo-Soul</li>
                     </ol>
                 <h3>Academic</h3>
                     <ol>
-                        <ls>Computer Science</ls>
-                        <ls>Maths</ls>
-                        <ls>Music</ls>
+                        <li>Computer Science</li>
+                        <li>Maths</li>
+                        <li>Music</li>
                     </ol>
         </div>
 
