--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Finn Li</h1>
         <ul>
             <li><a href="#introduction">Introduction</a></li>
-            <li><a href="interest">Interest</a></li>
+            <li><a href="#interest">Interest</a></li>
             <li><a href="#experience">Programming Experience</a></li>
         </ul>
         <div id="introduction">
