--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
                 </tbody>
             </table>
         </div>
+
+        <div id="form">
+            <form>
+                <h3>Leave your comments below</h3>
+                <input type="text">
+                <p>This doesnt't work actually</p>
+            </form>
+        </div>
     </body>
 </html>
 
