--- a/index.html
+++ b/index.html
@@ -67,11 +67,30 @@
             </table>
         </div>
 
+
+        <!--FORM This is my form FORM -->
         <div id="form">
             <form>
-                <h3>Leave your comments below</h3>
-                <input type="text">
-                <p>This doesnt't work actually</p>
+                <h1>Please Fill This in!<h1>
+                
+                <section id="info">
+                    <section id="basicInfo">
+                        <!--Get name : text-->
+                        <label for="name">What's your name?</label>
+                        <input type="text" id="name" name="name">
+
+                        <!--Get Gender : Radio-->
+                        <p>What's your gender?</p>
+                        <label for="male">Male</label>
+                        <input type="radio" id="male" name="gender" value="male">
+                        <label for="female">Female</label>
+                        <input type="radio" name="gender" id="female" value="female">
+                        <label for="other">Other</label>
+                        <input type="radio" id="other" name="gender" value="other">
+
+                        
+                    </section>
+                </section>
             </form>
         </div>
     </body>
