fixed font size problem

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!--FORM This is my form FORM -->
         <div id="form">
             <form>
-                <h1>Please Fill This in!<h1>
+                <h1>Please Fill This in!</h1>
                 
                 <section id="info">
                     <section id="basicInfo">
@@ -88,7 +88,7 @@
                         <label for="other">Other</label>
                         <input type="radio" id="other" name="gender" value="other">
 
-                        
+
                     </section>
                 </section>
             </form>
