fixed minor mistake

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <li><a href="#introduction">Introduction</a></li>
             <li><a href="#interest">Interest</a></li>
             <li><a href="#experience">Programming Experience</a></li>
-            <li><a href="#form"><strong>Survey!!!! Please Click On This!</strong>></a></li>
+            <li><a href="#form"><strong>Survey!!!! Please Click On This!</strong></a></li>
         </ul>
         <div id="introduction">
             <h2>Introduction</h2>
