--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
                     </seciton>
 
                     <section class="basicInfo">
+                        <br>
+                        <br>
                         <!--Get name : text-->
                         <label for="name">What's your name?</label>
                         <input type="text" id="name" name="name">
@@ -167,7 +169,7 @@
                         <br>
 
                         <!--FriendShip : List-->
-                        <p>Type your name</p>
+                        <span>Type your name. </span>
                         <label for="friend">If you're my friend, your name will pop up</label>
                         <input id="friend" name="friend" list="myFriends">
                         <datalist id="myFriends">
@@ -187,6 +189,7 @@
                         <br>
                         <textarea id="comments" rows="10" cols="40" name="comments">You're Perfect!</textarea>
 
+                        <br>
                         <!--Submit : Submit-->
                         <input type="submit" value="submit">
                     </seciton>
