changed Lishan's name

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <input id="friend" name="friend" list="myFriends">
                         <datalist id="myFriends">
                             <option value="Bevin">Bevin Zhang</option>
-                            <option value="LiSham">LiSham Li</option>
+                            <option value="LiSham">LiShan Li</option>
                             <option value="Yuki">Yuki Yang</option>
                         </datalist>
                     </section>
