added minlength for textbox

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <!--Comment : TextArea-->
                         <label for="comments">Leave your comments</label>
                         <br>
-                        <textarea id="comments" rows="10" cols="40" name="comments">You're Perfect!</textarea>
+                        <textarea id="comments" rows="10" cols="40" name="comments" minlength="10">You're Perfect!</textarea>
 
                         <br>
                         <!--Submit : Submit-->
