added link for hockey

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                         <li>Basketball</li>
                         <li>Roller Skating</li>
                         <li>Hockey</li>
+                        <a href="https://www.vanderbilthockey.com/">Learn More about Vandy Hockey</a>
                         <li>Surfing</li>
                         <li>volleyball</li>
                     </ol>
