--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                         <li>Roller Skating</li>
                         <li>Hockey</li>
                         <a href="https://www.vanderbilthockey.com/" target="_blank">Learn More about Vandy Hockey</a>
+                        <video src="https://www.youtube.com/watch?v=D77s5xOC8OI" width="320" height="240" controls>Video Doesn't exist</video>
                         <li>Surfing</li>
                         <li>volleyball</li>
                     </ol>
