embed youtube video

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <li>Roller Skating</li>
                         <li>Hockey</li>
                         <a href="https://www.vanderbilthockey.com/" target="_blank">Learn More about Vandy Hockey</a>
-                        <video src="https://youtu.be/D77s5xOC8OI" width="320" height="240" controls>Video Doesn't exist</video>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/D77s5xOC8OI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <li>Surfing</li>
                         <li>volleyball</li>
                     </ol>
