added photo on website

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </ul>
         <div id="introduction">
             <h2>Introduction</h2>
+            <img src="my_photo.png">
             <p>Hi. My name is <strong>Finn Li</strong>. This is my website.
                 <br /><br />
                 I made this webstie for learning purposes, so please <storng>DON'T</storng> judge or hack.
