--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <html>
     <head>
         <title>Finn Li's website</title>
+        <link href="style.css" rel="stylesheet">
     </head>
 
     <body>
         <h1>Finn Li</h1>
+        <nav class="navigation">
         <ul>
             <li><a href="#introduction">Introduction</a></li>
             <li><a href="#interest">Interest</a></li>
             <li><a href="#experience">Programming Experience</a></li>
             <li><a href="#form"><strong>Survey!!!! Please Click On This!</strong></a></li>
         </ul>
+        </nav>>
         <div id="introduction">
             <h2>Introduction</h2>
             <img src="my_photo.png" width="570" height="351">
