--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>Finn Li</h1>
+        <h1 class="title">Finn Li</h1>
         <nav class="navigation">
         <ul>
             <li><a href="#introduction">Introduction</a></li>
@@ -15,7 +15,7 @@
             <li><a href="#experience">Programming Experience</a></li>
             <li><a href="#form"><strong>Survey!!!! Please Click On This!</strong></a></li>
         </ul>
-        </nav>>
+        </nav>
         <div id="introduction">
             <h2>Introduction</h2>
             <img src="my_photo.png" width="570" height="351">
@@ -67,9 +67,9 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>None</td>
-                        <td>Still None</td>
-                        <td><em>I'm sorry...</em></td>
+                        <td>Harvard Summer School</td>
+                        <td>Since High School</td>
+                        <td><em>Vanderbilt University</em></td>
                     </tr>
                 </tbody>
             </table>
