--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="#form"><strong>Survey!!!! Please Click On This!</strong></a></li>
         </ul>
         </nav>
-        <div id="introduction">
+        <div class="introduction">
             <h2>Introduction</h2>
             <img src="my_photo.png" width="570" height="351">
             <p>Hi. My name is <strong>Finn Li</strong>. This is my website.
@@ -25,7 +25,7 @@
             </p>
         </div>
 
-        <div id="interest">
+        <div class="interest">
             <h2>My Interest</h2>
                 <h3>Sports</h3>
                     <ol>
@@ -55,7 +55,7 @@
                     </ol>
         </div>
 
-        <div id="experience">
+        <div class="experience">
             <h2>My Programming Experience</h2>
             <table>
                 <thead>
@@ -77,7 +77,7 @@
 
 
         <!--FORM This is my form FORM -->
-        <div id="form">
+        <div class="form">
             <form>
                 <h1>Please Fill This in!</h1>
                 
